--- a/examples/android/app/src/main/res/layout/activity_main.xml
+++ b/examples/android/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,42 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:text="Registration payload"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.022"
+            android:id="@+id/textView2"/>
+    <Button
+            android:text="Register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/registerButton" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/pinEntryField" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/pinEntryField"
+            android:hint="PIN" android:singleLine="true" android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="Token"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/token" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <CheckBox
+            android:text="Show status notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/showStatusNotificationCheck"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/pinEntryField"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
