--- a/examples/android/app/src/main/res/layout/activity_main.xml
+++ b/examples/android/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
             android:text="Token"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/token" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/tokenText" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"/>
     <CheckBox
