--- a/examples/android/app/src/main/res/layout/activity_main.xml
+++ b/examples/android/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,6 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registration payload"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.022"
-            android:id="@+id/textView2"/>
     <Button
             android:text="Register"
             android:layout_width="wrap_content"
@@ -33,12 +24,15 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
-            android:text="Token"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tokenText" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:text="Message"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/message" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/showStatusNotificationCheck" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <CheckBox
             android:text="Show status notification"
             android:layout_width="wrap_content"
