--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@
   color: #61dafb;
 }
 
+.toolbar {
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.button {
+  margin: 18px 0px 0px 10px !important;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
