--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  /* animation: App-logo-spin infinite 20s linear; */
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,20 +17,11 @@
   color: #61dafb;
 }
 
-.toolbar {
+.Device-list {
+  border-top: 1px solid #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
 }
 
 .button {
   margin: 18px 0px 0px 10px !important;
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
